# RenderRaccoon-Reloaded

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  DECISIONS.md  README.md
Assets/Config/: CustomDescription.txt  DeterministicDescription.txt  DeterministicMatrix.json  FreeRoamDescription.txt  LodRings.json  VoxelConfig.json
Assets/Materials/: Brick.json  Checker.json  Clouds.json  Skybox.json  Suzanne.json  Voxel.json  VoxelVegetation.json
Assets/Models/Tardis/: Tardis Exterior.gltf
Assets/Shaders/: Fragment.frag  Vertex.vert  basic.frag  basic.vert
Assets/Shaders/Default/: Default.frag  Default.vert
Assets/Shaders/Sky/: Clouds.frag  Clouds.vert  Skybox.frag  Skybox.vert
Assets/Shaders/Voxel/: Voxel.frag  Voxel.vert  VoxelCutout.frag
Benchmark Campaign/1 Lowest - i5 1035G4 - Iris Plus/Raw run data/: DETERMINISTIC-BASELINE-R16_2026-07-10_13-53-16.csv  DETERMINISTIC-BASELINE-R16_2026-07-10_14-26-12.csv  DETERMINISTIC-BASELINE-R16_2026-07-10_15-32-34.csv  DETERMINISTIC-BASELINE-R32_2026-07-10_13-54-58.csv  DETERMINISTIC-BASELINE-R32_2026-07-10_14-27-55.csv  DETERMINISTIC-BASELINE-R32_2026-07-10_15-34-16.csv  DETERMINISTIC-LOD-GM-R64_2026-07-10_14-00-12.csv  DETERMINISTIC-LOD-GM-R64_2026-07-10_14-33-08.csv  DETERMINISTIC-LOD-GM-R64_2026-07-10_15-39-24.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R256_2026-07-10_14-12-50.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R256_2026-07-10_14-45-46.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R256_2026-07-10_15-51-44.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R384_2026-07-10_14-23-50.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R384_2026-07-10_14-56-36.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R384_2026-07-10_16-02-20.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R64_2026-07-10_14-02-22.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R64_2026-07-10_14-35-16.csv  DETERMINISTIC-LOD-LA-GM-MT-AB-R64_2026-07-10_15-41-31.csv  DETERMINISTIC-LOD-LA-GM-MT-R256_2026-07-10_14-10-42.csv  DETERMINISTIC-LOD-LA-GM-MT-R256_2026-07-10_14-43-38.csv  DETERMINISTIC-LOD-LA-GM-MT-R256_2026-07-10_15-49-41.csv  DETERMINISTIC-LOD-LA-GM-MT-R384_2026-07-10_14-20-21.csv  DETERMINISTIC-LOD-LA-GM-MT-R384_2026-07-10_14-53-14.csv  DETERMINISTIC-LOD-LA-GM-MT-R384_2026-07-10_15-58-57.csv  (+27 more)
Engine/: CMakeLists.txt
Engine/OpenGL/glm/glm/detail/: func_common.inl
Engine/Source/: Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  Common.h  Engine.cpp  Engine.h  GLTFLib.hpp  GLTFTypes.h  ISubSystem.cpp  ISubSystem.h  RR.h  SceneManager.cpp  SceneManager.h  ShowCase.cpp  ShowCase.h  Types.h  pch.h
Engine/Source/Audio/: Audio.cpp  Audio.h  AudioChannel.cpp  AudioChannel.h  AudioManager.cpp  AudioManager.h  ComponentAudioTracker.cpp  ComponentAudioTracker.h  ManagerAudioTracker.cpp  ManagerAudioTracker.h  SpatialAudio.cpp  SpatialAudio.h  StaticAudio.cpp  StaticAudio.h  StaticChannel.cpp  StaticChannel.h  Tracker.h
Engine/Source/Audio/Voice/: AudioClip.h  AudioVoice.cpp  AudioVoice.h
Engine/Source/Benchmark/: BenchmarkData.cpp  BenchmarkData.h  BenchmarkParser.hpp  BenchmarkSubSystem.cpp  BenchmarkSubSystem.h  FrameStats.cpp  FrameStats.h
Engine/Source/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Source/Graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  VertexLayout.h
Engine/Source/Helpers/: ApplicationData.h  Common.h  Concepts.h  GLTFLib.hpp  Implementations.cpp  Printer.hpp  ShaderIO.hpp  ShaderLoader.hpp  TypeInfo.h  Types.h
Engine/Source/Helpers/Implementations/: Implementations.cpp
Engine/Source/Input/: InputManager.cpp  InputManager.h
Engine/Source/Physics/: BtConv.hpp  Collider.cpp  Collider.h  KinematicCharacterController.cpp  KinematicCharacterController.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
Engine/Source/Render/: Frustum.h  GPUBufferAllocator.cpp  GPUBufferAllocator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshArena.cpp  MeshArena.h  MeshData.h  PooledMesh.hpp  RenderQueue.cpp  RenderQueue.h  Skybox.cpp  Skybox.h
Engine/Source/Render/Voxels/: ChunkMesher.cpp  ChunkMesher.h  SurfaceMesher.cpp  SurfaceMesher.h  VoxelSkybox.cpp  VoxelSkybox.h
Engine/Source/Scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Engine/Source/Scene/Components/: AnimationComponent.cpp  AnimationComponent.h  AnimationStructs.h  AudioListenerComponent.cpp  AudioListenerComponent.h  AudioSourceComponent.cpp  AudioSourceComponent.h  CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
Engine/Source/Threading/: WorkerPool.cpp  WorkerPool.h
Engine/Source/Voxels/: Chunk.cpp  Chunk.h  ChunkData.h  ChunkManager.cpp  ChunkManager.h  LodNodeSelect.hpp  LodTile.h
Engine/Source/Voxels/ChunkManager/: ChunkManager.cpp  ChunkManager.h  ChunkManagerChunks.cpp  ChunkManagerTiles.cpp
Source/: ArtefactMenu.cpp  ArtefactMenu.h  AudioDemo.cpp  AudioDemo.h  Benchmark.cpp  Benchmark.h  DemoScene.cpp  Game.cpp  Game.h  MainMenuScene.cpp  MainMenuScene.h  MultiPitBenchmark.h  Player.cpp  Player.h  TestObject.cpp  TestObject.h  TestSubSystem.h  main.cpp
Source/Benchmark/: BenchmarkRunPresets.hpp  CameraPath.hpp
Source/Components/: FreeCameraComponent.cpp  FreeCameraComponent.h
Source/Helpers/: Printer.hpp  ShaderIO.hpp  shaderIO.hpp
Source/Scenes/: ArtefactMenu.cpp  ArtefactMenu.h  BenchmarkScene.cpp  BenchmarkScene.h  FreeRoam.cpp  FreeRoam.h  FreeRoamScene.cpp  FreeRoamScene.h  MainMenuScene.cpp  MainMenuScene.h
Source/Shaders/: basic.frag
Source/Testing/: AudioDemo.cpp  AudioDemo.h  Benchmark.cpp  Benchmark.h  Bullet.cpp  Bullet.h  DemoScene.cpp  DemoScene.h  Game.cpp  Game.h  MultiPitBenchmark.cpp  Player.cpp  Player.h  TestObject.cpp  TestSubSystem.cpp
Source/WorldGen/: Biome.hpp  BiomeID.h  BiomeMap.hpp  Noise.hpp  SurfaceLOD.hpp  Vegetation.hpp  WorldGen.hpp  WorldGenConfig.h
Tools/: lintShader.py
source/: main.cpp
(+244 files in other folders)
